--- a/app/Resources/views/Account/edit_password.html.twig
+++ b/app/Resources/views/Account/edit_password.html.twig
@@ -1,18 +1,14 @@
-{% extends ':Account:layout.html.twig' %}
+{% extends ':Account:overview.html.twig' %}
 
-{% block edit_account %}
-<div class="row">
-    <div class="span3">
-        {% include ':Account:sidebar.html.twig' %}
-    </div>
-    <div class="span9">
+{% block account_edit_password %}
 
-        {% include '::flash_messages.html.twig' %}
+    {% include '::flash_messages.html.twig' %}
 
+    <div class="well">
         <fieldset>
             <legend>{% if profile.user.password is null %}Set your password{% else %}Change your password{% endif %}</legend>
             {% include ':Form:user_password.html.twig' %}
         </fieldset>
     </div>
-</div>
+
 {% endblock %}
