--- a/app/Resources/views/Account/edit_picture.html.twig
+++ b/app/Resources/views/Account/edit_picture.html.twig
@@ -5,7 +5,7 @@
         <div class="span3">
             {% include ':Account:sidebar.html.twig' %}
         </div>
-        <div class="span9">
+        <div class="span9" id="account-info">
 
             {% include '::flash_messages.html.twig' %}
 
