--- a/app/Resources/views/Account/layout.html.twig
+++ b/app/Resources/views/Account/layout.html.twig
@@ -11,7 +11,7 @@
         <h1>Account settings</h1>
     </div>
 
-    <div data-pjax-container="edit_account">
+    <div data-pjax-container="edit_account" id="edit_account">
         {{ block('edit_account') }}
     </div>
 
