--- a/app/Resources/views/Form/user_email.html.twig
+++ b/app/Resources/views/Form/user_email.html.twig
@@ -1,4 +1,4 @@
-<form id="{{ form.vars.id }}" novalidate action="{{ path('account_edit_email') }}" {{ form_enctype(form) }} method="post" data-ajax>
+<form id="{{ form.vars.id }}" class="form-horizontal" novalidate action="{{ path('account_edit_email') }}" {{ form_enctype(form) }} method="post" data-ajax>
 
     {{ form_errors(form) }}
 
@@ -8,7 +8,7 @@
 
     {{ form_rest(form) }}
 
-    <div class="form-actions">
+    <div class="controls">
         <button type="submit" class="btn btn-primary">Change e-mail</button>
         <a class="btn" href="{{ path('account_overview') }}" data-ajax>Cancel</a>
     </div>
