--- a/app/Resources/views/Info/layout.html.twig
+++ b/app/Resources/views/Info/layout.html.twig
@@ -5,7 +5,7 @@
 {% include ':Segment:navbar_top.html.twig' %}
 
 <div class="main container">
-    <div data-pjax-container="info_page">
+    <div data-pjax-container="info_page" id="info_page">
         {{ block('info_page') }}
     </div>
 
