--- a/app/Resources/views/Form/user_password.html.twig
+++ b/app/Resources/views/Form/user_password.html.twig
@@ -1,4 +1,4 @@
-<form id="{{ form.vars.id }}" novalidate action="{{ path('account_edit_password') }}" {{ form_enctype(form) }} method="post" data-ajax>
+<form id="{{ form.vars.id }}" class="form-horizontal" novalidate action="{{ path('account_edit_password') }}" {{ form_enctype(form) }} method="post" data-ajax>
 
     {{ form_errors(form) }}
 
@@ -10,7 +10,7 @@
 
     {{ form_rest(form) }}
 
-    <div class="form-actions">
+    <div class="controls">
         <button type="submit" class="btn btn-primary">Update password</button>
         <a class="btn" href="{{ path('account_overview') }}" data-ajax>Cancel</a>
     </div>
