--- a/app/Resources/views/Segment/navbar_top.html.twig
+++ b/app/Resources/views/Segment/navbar_top.html.twig
@@ -4,13 +4,13 @@
     <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container">
-                <a class="brand">{{ site_name }}</a>
+                <a data-ajax href="{{ path('home') }}" class="brand">{{ site_name }}</a>
 
                 <ul class="nav">
                     {% if app.user %}
-                        <li class="{{ route == 'play' ? 'active' : '' }}"><a data-ajax href="{{ path('play') }}"><i class="icon-star"></i> Play</a></li>
-                        <li class="{{ route == 'search' ? 'active' : '' }}"><a data-ajax href="{{ path('search') }}"><i class="icon-globe"></i> Search</a></li>
-                        <li class="{{ app.user and route in ['profile','profile_photos'] and route_params.id == app.user.profile.id ? 'active' : '' }}"><a data-ajax href="{{ path('profile', {'id':app.user.profile.id}) }}"><i class="icon-home"></i> Profile</a></li>
+                        <li class="{{ route == 'play' ? 'active' : '' }}"><a data-ajax data-loader="#body" data-loader-type="overlay" href="{{ path('play') }}"><i class="icon-star"></i> Play</a></li>
+                        <li class="{{ route == 'search' ? 'active' : '' }}"><a data-ajax data-loader="#body" data-loader-type="overlay" href="{{ path('search') }}"><i class="icon-globe"></i> Search</a></li>
+                        <li class="{{ app.user and route in ['profile','profile_photos'] and route_params.id == app.user.profile.id ? 'active' : '' }}"><a data-ajax data-loader="#body" data-loader-type="overlay" href="{{ path('profile', {'id':app.user.profile.id}) }}"><i class="icon-home"></i> Profile</a></li>
                     {% else %}
                         <li class="{{ route == 'register' ? 'active' }}"><a href="{{ path('register') }}">Join us now!</a></li>
                     {% endif %}
@@ -21,7 +21,7 @@
                         <a class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-user"></i> <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li id="account-edit">
-                                <a href="{{ path('account_overview') }}" data-ajax>
+                                <a href="{{ path('account_overview') }}" data-ajax data-loader="#body" data-loader-type="overlay">
                                     {{ profile_picture(app.user.profile, 'thumbnail', {'class':'user-picture'}) }}
                                     <div class="summary">
                                         <div class="user-name">{{ app.user.name }}</div>
