--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,14 +5,15 @@
     <title>{{ block('title') }}</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="//kurumi.servehttp.com:1337/bootstrap/less/bootstrap.less">
-    <link rel="stylesheet" href="//kurumi.servehttp.com:1337/bootstrap/less/responsive.less">
-    <link rel="stylesheet" href="//kurumi.servehttp.com:1337/less/style.less">
+    <link rel="stylesheet" href="{{ asset('bootstrap/less/bootstrap.less') }}">
+    <link rel="stylesheet" href="{{ asset('bootstrap/less/responsive.less') }}">
+    <link rel="stylesheet" href="{{ asset('less/style.less') }}">
     <link rel="stylesheet" href="{{ asset('bundles/briareoschat/css/chat.css') }}">
     <link rel="stylesheet" href="{{ asset('bundles/kurumimain/css/bootstrap-fileupload.css') }}">
     <link rel="stylesheet" href="{{ asset('bundles/kurumimain/css/bootstrap-modal.css') }}">
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.js"></script>
+
     <script src="{{ asset('bootstrap/js/bootstrap-typeahead.js') }}"></script>
     <script src="{{ asset('bootstrap/js/bootstrap-transition.js') }}"></script>
     <script src="{{ asset('bootstrap/js/bootstrap-tooltip.js') }}"></script>
@@ -35,10 +36,12 @@
     <script src="{{ asset('bundles/kurumimain/js/bootstrap-modal.js') }}"></script>
     <script src="{{ asset('bundles/kurumimain/js/bootstrap-modalmanager.js') }}"></script>
     <script src="{{ socket_io_resource() }}"></script>
+    <script src="{{ asset('libraries/wookmark/jquery.wookmark.js') }}"></script>
     <script src="{{ asset('js/core.js') }}"></script>
 
     <script>
         $(function () {
+            var settings =
             $.each({{ javascript_settings()|json_encode|raw }}, function (index, javascriptSettings) {
                 window.setSettings(javascriptSettings.name, javascriptSettings.settings, $('body'));
             });
@@ -46,7 +49,7 @@
     </script>
 </head>
 <body>
-<div data-pjax-container="body">
+<div data-pjax-container="body" id="body">
     <div class="page-container">
         {{ block('body') }}
     </div>
