--- a/web/less/style.less
+++ b/web/less/style.less
@@ -1,8 +1,9 @@
 @import "../bootstrap/less/variables.less";
 @import "../bootstrap/less/mixins.less";
 
-body.modal-open {
-  overflow: hidden;
+html {
+  overflow: -moz-scrollbars-vertical;
+  overflow-y: scroll;
 }
 
 .inline-block {
@@ -166,12 +167,6 @@ body.modal-open {
 
 }
 
-@media (min-width: 980px) {
-  .main.container {
-    margin-top: 55px;
-  }
-}
-
 @media (max-width: 767px) {
   #front-page {
     margin-left: -20px;
@@ -200,9 +195,6 @@ body.modal-open {
       padding-right: 15px;
     }
   }
-}
-
-@media (max-width: 480px) {
 }
 
 .alert .alert-messages {
@@ -322,6 +314,9 @@ body.modal-open {
     padding-top: 5px;
   }
 
+  .main.container {
+    margin-top: 55px;
+  }
 }
 
 @media (max-width: 979px) {
@@ -343,3 +338,120 @@ body.modal-open {
   .ie7-inline-block();
 }
 
+#photo-modal.modal {
+  margin-top: 10px !important;
+  top: auto;
+}
+
+.photo-container {
+  display: table-cell;
+  vertical-align: middle;
+  width: 100%;
+}
+
+.ajax-overlay-loader {
+  .opacity(30);
+  z-index: 200;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background: #fff url(../images/loader.gif) no-repeat center center;
+  cursor: wait;
+  display: none;
+}
+
+.link-table {
+  min-width: 400px;
+
+  .link-element {
+    display: block;
+    padding: 10px 5px;
+
+    &:hover {
+      background: #F7F7F7;
+      text-decoration: none;
+
+      .link-edit {
+        .icon-pencil {
+          display: inline-block;
+          .ie7-inline-block();
+        }
+        .link-edit-text {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+
+  .link-row {
+    border-top: 1px solid #e9e9e9;
+
+    &#link-name {
+      border-top: none;
+    }
+  }
+
+  .link-label, .link-value, .link-edit {
+    display: inline-block;
+    .ie7-inline-block();
+  }
+
+  .link-value {
+    display: block;
+  }
+
+  .link-label {
+    color: #333;
+    float: left;
+    width: 165px;
+    font-weight: bold;
+  }
+
+  .link-value {
+    color: #808080;
+    margin-left: 165px;
+    margin-right: 50px;
+  }
+
+  .link-edit {
+    float: right;
+    text-align: right;
+
+    .icon-pencil {
+      display: none;
+    }
+  }
+}
+
+#account-info .link-table {
+
+  .well {
+    margin-bottom: 0;
+  }
+
+  #link-name {
+    .link-value {
+    }
+  }
+
+  #link-password {
+    .icon-warning-sign {
+      margin-left: -20px;
+    }
+  }
+}
+
+.picture-wall {
+  position: relative;
+
+  .picture-brick {
+    margin-bottom: 4px;
+
+    img {
+      width: 200px;
+      display: block;
+    }
+  }
+}
