--- a/app/Resources/views/Payment/payment.html.twig
+++ b/app/Resources/views/Payment/payment.html.twig
@@ -1,5 +1,5 @@
 {% if app.request.isXmlHttpRequest %}
-<div>
+<div class="modal" id="modal-payment">
     <div class="modal-header">
         <h3>Top up with {{ site_name }}</h3>
     </div>
