--- a/app/Resources/views/Home/home.html.twig
+++ b/app/Resources/views/Home/home.html.twig
@@ -10,8 +10,10 @@
         <div class="row">
             <div class="span12 picture-wall">
                 {% for picture in pictures %}
-                    <div class="picture-brick">
-                        {{ picture(picture, 'wall', {}, {'auto_dimensions':true}) }}
+                    <div class="picture-brick" id="picture-{{ picture.id }}" style="padding: 5px; background: black;">
+                        <a data-ajax data-modal data-loader="#picture-{{ picture.id }}" data-loader-type="overlay" href="{{ path('profile_photo',{'id':picture.id}) }}">
+                            {{ picture(picture, 'wall', {}, {'scale_width':200}) }}
+                        </a>
                     </div>
                 {% endfor %}
             </div>
